--- a/style.css
+++ b/style.css
@@ -67,9 +67,11 @@
    transform:rotate(360deg)
 }
 .myImage img{
-   height: 320px;
-   width: 220px;
-   padding: 50px;
+   height: 350px;
+   width: 230px;
+   padding: 60px;
+   border-radius: 50%;
+   margin-bottom: 10px;
 }
 .Designation{
    width: 520px;
@@ -95,14 +97,17 @@
    margin: 0 auto;
    background-color: cornflowerblue;
    border-radius: 10px;
+   padding-bottom: 20px;
 }
 .aboutMe h2{
-   font-size: 40px;
+   font-size: 50px;
+   margin-left: 90px
 }
 hr{
    border: 5px dotted wheat;
-   margin: 30px;
+   margin: 0 30px;
    border-bottom: none;
+   margin-bottom: 40px;
 }
 .aboutMeContainer{
    display: flex;
@@ -143,3 +148,148 @@ hr{
    cursor: pointer;
 }
 /* About me end */
+
+/* Experience Start */
+.Experience{
+   width: 85%;
+   margin: 0 auto;
+   display: flex;
+   justify-content: space-evenly;
+}
+.work{
+   width: 33%;
+   
+}
+.Experience .card{
+   background-color: darkgray;
+   border-radius: 5px;
+   border: 1px solid black;
+   padding: 20px;
+   transition: 0.3s;
+   height: 540px;
+}
+.card:hover{
+   box-shadow: 2px 4px 8px gold;
+}
+.cardIcon{
+   text-align: center;
+   font-size: 50px;
+   
+   
+}
+.cardIcon i{
+   border: 1px solid white;
+   border-radius: 50%;
+   overflow: hidden;
+   padding: 15px;
+}
+.cardTitle h2{
+   text-align: center;
+   background-color: darkcyan;
+   color: white;
+   padding: 10px;
+}
+.cardDesc{
+   text-align: left;
+   padding-top: 10px;
+   padding-left: 10px;
+}
+.skillContainer{
+   padding-right: 45px;
+}
+.skillContainer li{
+   list-style: none;
+   font-weight: bold;
+   margin: 20px 2px;
+   position: relative;
+}
+.skillContainer li::before{
+   position:absolute;
+   content: '';
+   width: 100%;
+   height: 10px;
+   background-color: rgb(161, 153, 168);
+   left: 0;
+   top: calc(100% + 5px);
+   border-radius: 1000px;
+}
+.skillContainer li::after{
+   position:absolute;
+   content: '';
+   width: 1%;
+   height: 10px;
+   background-color: rgb(180, 58, 105);
+   left: 0;
+   top: calc(100% + 5px);
+   border-radius: 1000px;
+   animation-duration: 3s;
+   animation-delay: 2s;
+   animation-timing-function: linear;
+   animation-fill-mode: forwards;
+   animation-iteration-count: infinite;
+   animation-name: html;
+}
+@keyframes html{
+   to{
+      width: 85%;
+   }
+}
+/* Experience end */
+
+/* contact me start */
+.contact{
+   width: 85%;
+   margin: 0 auto;
+   margin-top: 30px;
+   display: flex;
+   justify-content: space-around;
+}
+.contactMe{
+   text-align: center;
+   width: 40%;
+}
+.contactMe input, textarea{
+   width: 100%;
+   margin: 5px;
+   border: none;
+   padding: 5px;
+   resize: none;
+   background-color: rgb(223, 198, 198);
+   color: black;
+}
+.contactMe button{
+   margin: 0px 60px;
+   background-color: rgb(25, 25, 27);
+   color: white;
+}
+.contactMe i{
+   font-size: 50px;
+   margin: 8px;
+   padding: 8px;
+}
+/* contact me end */
+
+/* Footer start */
+.footer{
+   height: 80px;
+   width: 93%;
+   margin: 0 auto;
+   background-color: black;
+   color: white;
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+}
+.footerMenu a{
+   text-decoration: none;
+   font-size:;
+   padding: 5px;
+   color:antiquewhite;
+   width: 90px;
+   background-color: rgb(2, 2, 2);
+   margin: 0 ;
+   border-radius: 5px;
+}
+.footerMenu a:hover{
+   background-color:rgb(109, 182, 182);
+/* Footer end */
